# horus

./: .env.example  .gitignore  ReadMe.md  main.py  paths.py  pyproject.toml
src/: horus.py  main.py  utils.py
src/checks/: preflight.py
src/horus/: config.py  horus.py  main.py  paths.py
src/horus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/horus/checks/: __init__.py  preflight.py
src/horus/output/: __init__.py  discord.env  discord.py  horus_bot.py
src/horus/scanners/: __init__.py  httpx.py  subfinder.py
src/horus/targets/: __init__.py  diff.py  loader.py  parser.py
src/targets/: loader.py
