[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "horus"
version = "0.1.0"
description = "HORUS recon + diff tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "requests",
  "discord.py",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
horus = "horus.main:main"
